.ebextensions file changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loan Application</title>
+    <title>Loan Performance Prediction</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -120,12 +120,12 @@
                 <option value="No">No</option>
             </select>
 
-            <label for="liststatus">Initial List Status</label>
+            <!-- <label for="liststatus">Initial List Status</label>
             <select id="liststatus" name="liststatus">
                 <option value=""></option>
                 <option value="Whole">Whole</option>
                 <option value="Fractional">Fractional</option>
-            </select>
+            </select> -->
 
             <h3>Loan Information:</h3>
             
